# public/specs/openapi.yml
@@ -11,18 +11,27 @@ servers:
     description: Stage server
 
 paths:
-  /auth/jwt/{token}:
-    get:
+#  Auth
+  /api/auth/login:
+    post:
+      summary: Get a JWT via given credentials.
       security: []
-      parameters:
-        - name: token
-          in: path
-          description: Invitation token for poll
-          required: true
-          schema:
-            type: string
-            example: eb9e50eafcfbd4cf4be87561ca681726
-      summary: Get JWT token
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                  example: example@example.com
+                password:
+                  type: string
+                  example: password
+              required:
+                - email
+                - password
       responses:
         200:
           description: JWT token
@@ -34,31 +43,175 @@ paths:
                   token:
                     type: string
                     example: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC8xMjcuMC4wLjFcL2F1dGhcL2p3dFwvZWI5ZTUwZWFmY2ZiZDRjZjRiZTg3NTYxY2E2ODE3MjYiLCJpYXQiOjE2MTgwODY1NjYsImV4cCI6MTYxODA5MDE2NiwibmJmIjoxNjE4MDg2NTY2LCJqdGkiOiI0OXFHYU1LamR5NTBudXIzIiwic3ViIjoxMSwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyIsImF2YWlsYWJsZV9wb2xsX2lkIjoxOH0.fIiH5tVZURIlCxt0MHsdjCVWGW7gMUTRqGMMTtO2RE8
-                  token_type:
+                  tokenType:
                     type: string
                     example: bearer
-                  expires_in:
+                  expiresIn:
                     description: Expire after 3600 seconds
                     type: integer
                     example: 3600
                 required:
                   - token
-                  - token_type
-                  - expires_in
+                  - tokenType
+                  - expiresIn
         401:
           $ref: '#/components/responses/UnauthorizedError'
-
-  /auth/jwt/invalidate:
-    put:
-      summary: Invalidate JWT token
+  /api/auth/invitation:
+    post:
+      summary: Get a JWT via given invitation token.
+      security: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                token:
+                  type: string
+                  example: eb9e50eafcfbd4cf4be87561ca681726
+              required:
+                - token
       responses:
         200:
-          description: JWT token was invalidated
-          content: { }
+          description: JWT token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC8xMjcuMC4wLjFcL2F1dGhcL2p3dFwvZWI5ZTUwZWFmY2ZiZDRjZjRiZTg3NTYxY2E2ODE3MjYiLCJpYXQiOjE2MTgwODY1NjYsImV4cCI6MTYxODA5MDE2NiwibmJmIjoxNjE4MDg2NTY2LCJqdGkiOiI0OXFHYU1LamR5NTBudXIzIiwic3ViIjoxMSwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyIsImF2YWlsYWJsZV9wb2xsX2lkIjoxOH0.fIiH5tVZURIlCxt0MHsdjCVWGW7gMUTRqGMMTtO2RE8
+                  tokenType:
+                    type: string
+                    example: bearer
+                  expiresIn:
+                    description: Expire after 3600 seconds
+                    type: integer
+                    example: 3600
+                required:
+                  - token
+                  - tokenType
+                  - expiresIn
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+  /api/auth/azure:
+    post:
+      summary: Get a JWT via given azure access token.
+      security: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                accessToken:
+                  type: string
+                  example: eb9e50eafcfbd4cf4be87561ca681726
+              required:
+                - accessToken
+      responses:
+        200:
+          description: JWT token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC8xMjcuMC4wLjFcL2F1dGhcL2p3dFwvZWI5ZTUwZWFmY2ZiZDRjZjRiZTg3NTYxY2E2ODE3MjYiLCJpYXQiOjE2MTgwODY1NjYsImV4cCI6MTYxODA5MDE2NiwibmJmIjoxNjE4MDg2NTY2LCJqdGkiOiI0OXFHYU1LamR5NTBudXIzIiwic3ViIjoxMSwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyIsImF2YWlsYWJsZV9wb2xsX2lkIjoxOH0.fIiH5tVZURIlCxt0MHsdjCVWGW7gMUTRqGMMTtO2RE8
+                  tokenType:
+                    type: string
+                    example: bearer
+                  expiresIn:
+                    description: Expire after 3600 seconds
+                    type: integer
+                    example: 3600
+                required:
+                  - token
+                  - tokenType
+                  - expiresIn
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+  /api/auth/logout:
+    post:
+      summary: Log the user out (Invalidate the token).
+      security:
+        - BearerAuth: []
+      responses:
+        200:
+          description: User logged out and JWT token was invalidated
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Successfully logged out
+                required:
+                  - message
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+  /api/auth/me:
+    post:
+      summary: Get the authenticated User.
+      security:
+        - BearerAuth: []
+      responses:
+        200:
+          description: Authenticated User
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  name:
+                    type: string
+                    example: John Doe
+                  email:
+                    type: string
+                    example: john-doe@example.com
+                required:
+                  - name
+                  - email
+        401:
+          $ref: '#/components/responses/UnauthorizedError'
+  /api/auth/refresh:
+    post:
+      summary: Refresh a token.
+      security:
+        - BearerAuth: [ ]
+      responses:
+        200:
+          description: JWT token
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  token:
+                    type: string
+                    example: eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJpc3MiOiJodHRwOlwvXC8xMjcuMC4wLjFcL2F1dGhcL2p3dFwvZWI5ZTUwZWFmY2ZiZDRjZjRiZTg3NTYxY2E2ODE3MjYiLCJpYXQiOjE2MTgwODY1NjYsImV4cCI6MTYxODA5MDE2NiwibmJmIjoxNjE4MDg2NTY2LCJqdGkiOiI0OXFHYU1LamR5NTBudXIzIiwic3ViIjoxMSwicHJ2IjoiMjNiZDVjODk0OWY2MDBhZGIzOWU3MDFjNDAwODcyZGI3YTU5NzZmNyIsImF2YWlsYWJsZV9wb2xsX2lkIjoxOH0.fIiH5tVZURIlCxt0MHsdjCVWGW7gMUTRqGMMTtO2RE8
+                  tokenType:
+                    type: string
+                    example: bearer
+                  expiresIn:
+                    description: Expire after 3600 seconds
+                    type: integer
+                    example: 3600
+                required:
+                  - token
+                  - tokenType
+                  - expiresIn
         401:
           $ref: '#/components/responses/UnauthorizedError'
 
-  /email-lists:
+#  EmailsLists
+  /api/emails-lists:
     get:
       summary: Get all email lists
       responses:
@@ -83,10 +236,18 @@ paths:
                         type: string
                         example: test@test.com
                       description: Empty array if no emails
+                    createdAt:
+                      type: string
+                      example: 2021-09-19T12:33:02.000000Z
+                    updatedAt:
+                      type: string
+                      example: 2021-09-19T12:33:02.000000Z
                   required:
                     - id
                     - title
-                    - emailsCount
+                    - emails
+                    - createdAt
+                    - updatedAt
         401:
           $ref: '#/components/responses/UnauthorizedError'
     post:
@@ -130,10 +291,18 @@ paths:
                       type: string
                       example: test@test.com
                     description: Empty array if no emails
+                  createdAt:
+                    type: string
+                    example: 2021-09-19T12:33:02.000000Z
+                  updatedAt:
+                    type: string
+                    example: 2021-09-19T12:33:02.000000Z
                 required:
                   - id
                   - title
                   - emails
+                  - createdAt
+                  - updatedAt
         401:
           $ref: '#/components/responses/UnauthorizedError'
         422:
@@ -143,18 +312,25 @@ paths:
               schema:
                 type: object
                 properties:
-                  title:
+                  message:
+                    type: string
+                    example: The given data was invalid.
+                  errors:
                     type: array
                     items:
-                      type: string
-                      example: The title field is required.
-                  emails:
-                    type: array
-                    items:
-                      type: string
-                      example: The emails field is required.
-
-  /email-lists/{id}:
+                      type: object
+                      properties:
+                        title:
+                          type: array
+                          items:
+                            type: string
+                            example: The title field is required.
+                        email:
+                          type: array
+                          items:
+                            type: string
+                            example: The emails field is required.
+  /api/emails-lists/{id}:
     get:
       summary: Get email list
       parameters:
@@ -185,10 +361,18 @@ paths:
                       type: string
                       example: test@test.com
                     description: Empty array if no emails
+                  createdAt:
+                    type: string
+                    example: 2021-09-19T12:33:02.000000Z
+                  updatedAt:
+                    type: string
+                    example: 2021-09-19T12:33:02.000000Z
                 required:
                   - id
                   - title
                   - emails
+                  - createdAt
+                  - updatedAt
         401:
           $ref: '#/components/responses/UnauthorizedError'
         404:
@@ -219,9 +403,12 @@ paths:
                     type: string
                     example: test@test.com
                   description: Empty array if no emails
-              required:
-                - title
-                - emails
+                createdAt:
+                  type: string
+                  example: 2021-09-19T12:33:02.000000Z
+                updatedAt:
+                  type: string
+                  example: 2021-09-19T12:33:02.000000Z
         required: true
       responses:
         201:
@@ -280,15 +467,23 @@ paths:
             type: integer
             example: 99
       responses:
-        200:
-          description: Email list was deleted
-          content: { }
         401:
           $ref: '#/components/responses/UnauthorizedError'
+        400:
+          description: Unable to delete the list of emails that is participating in the vote
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Unable to delete the list of emails that is participating in the vote
         404:
           description: Email list not found
-          content: { }
+          content: {}
 
+#  Polls
   /polls:
     get:
       summary: Get all polls
@@ -1235,7 +1430,7 @@ paths:
 
 components:
   securitySchemes:
-    bearerAuth:
+    BearerAuth:
       type: http
       scheme: bearer
       bearerFormat: JWT
@@ -1244,10 +1439,13 @@ components:
     UnauthorizedError:
       description: JWT token is missing or invalid
       content:
-        text/plain:
+        application/json:
           schema:
-            type: string
-            example: Unauthorized.
+            type: object
+            properties:
+              message:
+                type: string
+                example: Unauthenticated.
 
 security:
-  - bearerAuth: []
+  - BearerAuth: []
